--- a/vaadin-mvvm/pom.xml
+++ b/vaadin-mvvm/pom.xml
@@ -140,8 +140,8 @@
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-cdi-modified</artifactId>
-<!-- 			<artifactId>vaadin-cdi</artifactId> -->
-<!-- 			<version>1.0.0.alpha2</version> -->
+			<!-- <artifactId>vaadin-cdi</artifactId> -->
+			<!-- <version>1.0.0.alpha2</version> -->
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
@@ -196,6 +196,13 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Required by CODI (in Tomcat 7) -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+
 		<!-- google guave events TODO: remove when cdi events are working -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
