--- a/cdi/vaadin-cdi-modified/pom.xml
+++ b/cdi/vaadin-cdi-modified/pom.xml
@@ -270,6 +270,13 @@
 			</exclusions>
 		</dependency>
 
+		<!-- Required by CODI (in Tomcat 7) -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
 			<artifactId>myfaces-extcdi-jsf12-module-api</artifactId>
